# kn-code

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/kn-code/: Cargo.toml
crates/kn-code-atomic/: Cargo.toml
crates/kn-code-atomic/src/: history.rs  journal.rs  lib.rs  staging.rs  transaction.rs
crates/kn-code-auth/: Cargo.toml
crates/kn-code-auth/src/: api_key.rs  lib.rs  oauth.rs  pkce.rs  token_store.rs
crates/kn-code-cli/: Cargo.toml
crates/kn-code-cli/src/: main.rs
crates/kn-code-config/: Cargo.toml
crates/kn-code-config/src/: env.rs  lib.rs  migrations.rs  settings.rs
crates/kn-code-nats/: Cargo.toml
crates/kn-code-nats/src/: agent.rs  config.rs  connection.rs  jetstream.rs  kv.rs  lib.rs  permission.rs  publish.rs  subjects.rs  subscribe.rs
crates/kn-code-permissions/: Cargo.toml
crates/kn-code-permissions/src/: bash_perms.rs  classifier.rs  lib.rs  rules.rs  sandbox.rs
crates/kn-code-plugins/: Cargo.toml
crates/kn-code-plugins/src/: host.rs  lib.rs  lifecycle.rs  runtime.rs  sandbox.rs
crates/kn-code-providers/: Cargo.toml
crates/kn-code-providers/src/: anthropic.rs  compatible.rs  factory.rs  github_copilot.rs  lib.rs  openai.rs  traits.rs
crates/kn-code-sdk/: Cargo.toml
crates/kn-code-sdk/src/: lib.rs
crates/kn-code-server/: Cargo.toml
crates/kn-code-server/src/: lib.rs  nats_tools.rs  nats_transport.rs  server.rs  sse.rs  telegram.rs  ws.rs
crates/kn-code-server/src/headless/: control.rs  events.rs  jsonl.rs  mod.rs  queue.rs
crates/kn-code-server/src/middleware/: auth.rs  logging.rs  rate_limit.rs
crates/kn-code-server/src/routes/: health.rs  mod.rs  models.rs  providers.rs  run.rs  sessions.rs
crates/kn-code-session/: Cargo.toml
crates/kn-code-session/src/: compact.rs  lib.rs  manager.rs  messages.rs  prompt.rs  recovery.rs  runner.rs  store.rs
crates/kn-code-test-utils/: Cargo.toml
crates/kn-code-test-utils/src/: lib.rs
crates/kn-code-tools/: Cargo.toml
crates/kn-code-tools/src/: agent.rs  ask_user.rs  bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  lib.rs  lsp.rs  mcp.rs  registry.rs  skill.rs  todo_write.rs  traits.rs  web_fetch.rs  web_search.rs
crates/kn-code-voice/: Cargo.toml
crates/kn-code-voice/src/: audio.rs  lib.rs  manager.rs  stt.rs  telegram.rs  tts.rs  wake_word.rs
crates/kn-code/src/: lib.rs  prelude.rs
specs/: 001-overview-and-architecture.md  002-provider-and-auth.md  003-tool-system.md  004-headless-api-server.md  005-atomic-operations.md  006-wasm-plugin-system.md  007-session-management.md  008-paperclip-adapter-compatibility.md  009-build-system.md
tests/integration/: headless_test.rs  mod.rs  nats_test.rs  permission_test.rs
