[package]
name = "kn-code-atomic"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
sha2.workspace = true
tempfile.workspace = true
uuid.workspace = true
tracing.workspace = true
