[package]
name = "kn-code-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kn-code"
path = "src/main.rs"

[dependencies]
kn-code = { path = "../kn-code" }
kn-code-config = { path = "../kn-code-config" }
kn-code-server = { path = "../kn-code-server" }
kn-code-session = { path = "../kn-code-session" }
kn-code-auth = { path = "../kn-code-auth" }
kn-code-providers = { path = "../kn-code-providers" }
kn-code-tools = { path = "../kn-code-tools" }
kn-code-permissions = { path = "../kn-code-permissions" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true
dirs.workspace = true
chrono.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

[features]
default = ["server"]
server = []
tui = ["dep:ratatui", "dep:crossterm"]
