[package]
name = "kn-code-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
dirs.workspace = true
anyhow.workspace = true
secrecy.workspace = true
tracing.workspace = true
