[package]
name = "kn-code-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kn-code-tools = { path = "../kn-code-tools" }
kn-code-config = { path = "../kn-code-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
sha2.workspace = true
