[package]
name = "kn-code-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kn-code-config = { path = "../kn-code-config" }
kn-code-auth = { path = "../kn-code-auth" }
kn-code-providers = { path = "../kn-code-providers" }
kn-code-tools = { path = "../kn-code-tools" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
sha2.workspace = true
