[package]
name = "kn-code-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kn-code-config = { path = "../kn-code-config" }
kn-code-permissions = { path = "../kn-code-permissions" }
kn-code-atomic = { path = "../kn-code-atomic" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
globset.workspace = true
ignore.workspace = true
schemars.workspace = true
async-trait = "0.1"
regex = "1"
walkdir = "2"
reqwest.workspace = true
html2md.workspace = true
uuid.workspace = true
kn-code-auth = { path = "../kn-code-auth" }
url.workspace = true
hickory-resolver.workspace = true
