[package]
name = "kn-code-voice"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
secrecy.workspace = true
cpal = "0.15"
hound = "3.5"
dirs.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
uuid.workspace = true

[features]
default = ["wake-word", "stt", "tts"]
wake-word = []
stt = []
tts = []
